@@ -1,0 +1,5 @@
+Some binary and unary arithmetic operations have been sped up by, when
+possible, using the space holding one of the operands to hold the
+result, rather than allocating new space.  Though primarily a speed
+improvement, for very long vectors avoiding this allocation could
+avoid running out of space.
